--- a/Question 2/index.html
+++ b/Question 2/index.html
@@ -7,6 +7,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>How to react cookie</h1>
+    <h1>How to read cookie</h1>
 </body>
 </html>
