--- a/Question 5/index.html
+++ b/Question 5/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question 38</title>
-    <script src="Script.js"></script>
+    <!-- <script src="Script.js"></script> -->
+   
 </head>
 <body>
-    <h1>Simple DOM Model</h1>
+    <h1 id="heading">Simple DOM Model</h1>
+  
+  <script src="Script.js">
+    </script>
 </body>
 </html>
