--- a/Question 8/index.html
+++ b/Question 8/index.html
@@ -8,5 +8,279 @@
 </head>
 <body>
     <h1>Empty An array</h1>
+    <script>
+        // program to reverse a string
+
+// function reverseString(str) {
+
+// empty string
+// let newString = "";
+// for (let i = str.length - 1; i >= 0; i--) {
+//     newString += str[i];
+// }
+// return newString;
+// }
+
+// // take input from the user
+// const string = prompt('Enter a string: ');
+
+// const result = reverseString(string);
+// console.log(result);
+
+// const fruits = ["Banana", "Orange", "Apple", "Mango"];
+// let result = Array.isArray(fruits)
+
+
+
+// let Arr = [1, 2, 3, 4, 5];
+ 
+// console.log("Array Elements: " + Arr);
+// console.log("Array Length: " + Arr.length);
+ 
+// function emptyArray() {
+//     Arr = [];
+//     console.log("Empty Array Elements: " + Arr);
+//     console.log("Empty Array Length: " + Arr.length);
+// }
+ 
+// emptyArray();
+
+// console.log(Number.isInteger("apple"));
+// console.log(Number.isInteger(0));
+// console.log(Number.isInteger(2));
+
+// const originalArray = [1, 2, 3];
+// const duplicatedArray = originalArray.concat(originalArray);
+
+// console.log(duplicatedArray); // Output: [1, 2, 3, 1, 2, 3]
+
+// const originalArray = [1, 2, 3];
+// const duplicatedArray = [...originalArray, ...originalArray];
+
+// console.log(duplicatedArray); // Output: [1, 2, 3, 1, 2, 3]
+
+// function createBase(baseValue) {
+//   return function (num) {
+//     return baseValue + num;
+//   };
+// }
+// Example usage:
+// const addSix = createBase(6);
+
+// console.log(addSix(10)); // Output: 16
+// console.log(addSix(21)); // Output: 27
+
+// function fizzBuzz(n) {
+//   for (let i = 1; i <= n; i++) {
+//     if (i % 3 === 0 && i % 5 === 0) {
+//       console.log("FizzBuzz");
+//     } else if (i % 3 === 0) {
+//       console.log("Fizz");
+//     } else if (i % 5 === 0) {
+//       console.log("Buzz");
+//     } else {
+//       console.log(i);
+//     }
+//   }
+// }
+
+
+// Example usage:
+// fizzBuzz(100);
+
+// console.log(result)
+
+// function areAnagrams(str1, str2) {
+//   // Remove whitespace and convert to lowercase for case-insensitive comparison
+//   const normalizedStr1 = str1.replace(/\s/g, '').toLowerCase();
+//   const normalizedStr2 = str2.replace(/\s/g, '').toLowerCase();
+
+//   // Sort the characters of each string and compare them
+//   const sortedStr1 = normalizedStr1.split('').sort().join('');
+//   const sortedStr2 = normalizedStr2.split('').sort().join('');
+
+//   // Check if the sorted strings are equal
+//   return sortedStr1 === sortedStr2;
+// }
+
+// // Example usage:
+// const str1 = "mary";
+// const str2 = "army";
+
+// console.log(areAnagrams(str1, str2)); // Output: true
+
+// function outer() { 
+//         let str = "Hello"; 
+//         function inner() { 
+//             console.log(str); 
+//         } 
+//         return inner; 
+//     } 
+//     const fun = outer(); 
+//     fun(); 
+
+
+
+// console.log(Boolean(0));       // Output: false
+// console.log(Boolean(1));       // Output: true
+// console.log(Boolean(''));      // Output: false
+// console.log(Boolean('hello')); // Output: true
+// console.log(Boolean(null));    // Output: false
+// console.log(Boolean(undefined)); // Output: false
+
+// console.log(!0);               // Output: true
+// console.log(!'');              // Output: true
+// console.log(!null);            // Output: true
+// console.log(!undefined);       // Output: true
+
+
+// function multiply(x) {
+//   return function(y) {
+//     return x * y;
+//   };
+// }
+
+// // Example usage:
+// const result = multiply(5)(6);
+// console.log(result); // Output: 30
+
+// const array = [1, 2, 3, 4, 5];
+
+// for (let i = 0; i < array.length; i++) {
+//   console.log(array[i]);
+// }
+
+// const array = [1, 2, 3, 4, 5];
+
+// // Modify the element at index 2
+// array[2] = 10;
+
+// console.log(array); // Output: [1, 2, 10, 4, 5]
+
+
+// const array = [1, 2, 3, 4, 5];
+
+// const element = 3;
+
+// const foundElement = array.find(item => item === element);
+
+// if (foundElement !== undefined) {
+//   console.log("Element exists in the array");
+// } else {
+//   console.log("Element does not exist in the array");
+// }
+
+// const array = [5, 2, 8, 1, 3];
+
+// // Sorting the array in ascending order
+// array.sort();
+
+// console.log(array); // Output: [1, 2, 3, 5, 8]
+
+// function convertTo2DArray(arr, size) {
+//   const result = [];
+//   for (let i = 0; i < arr.length; i += size) {
+//     result.push(arr.slice(i, i + size));
+//   }
+//   return result;
+// }
+
+// // Example usage:
+// const oneDimArray = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+// const twoDimArray = convertTo2DArray(oneDimArray, 3);
+// console.log(twoDimArray);
+
+// var a = parseInt(prompt("enter a no."))
+// if (a % 3 === 0) {
+//     console.log("true")
+// }
+// else {
+//     console.log("false")
+// }
+
+// Create an array of objects
+// const arrayOfObjects = [
+//   { number: 5 },
+//   { number: 10 },
+//   { number: 15 },
+//   { number: 20 },
+//   { number: 25 },
+// ];
+
+// // Find divisibility of 3
+// const divisibleBy3 = arrayOfObjects.filter(obj => obj.number % 3 === 0);
+
+// console.log("Numbers divisible by 3:");
+// console.log(divisibleBy3);
+
+// function bubbleSort(arr) {
+//   const len = arr.length;
+//   for (let i = 0; i < len - 1; i++) {
+//     for (let j = 0; j < len - 1 - i; j++) {
+//       if (arr[j] > arr[j + 1]) {
+//         // Swap elements if they are in the wrong order
+//         const temp = arr[j];
+//         arr[j] = arr[j + 1];
+//         arr[j + 1] = temp;
+//       }
+//     }
+//   }
+//   return arr;
+// }
+
+// Example usage:
+// const unsortedArray = [5, 3, 8, 1, 4];
+// console.log("Unsorted array:", unsortedArray);
+
+// const sortedArray = bubbleSort(unsortedArray);
+// console.log("Sorted array:", sortedArray);
+
+
+// Initialize an empty stack
+// const stack = [];
+
+// // Push elements onto the stack (LIFO)
+// stack.push(10);
+// stack.push(20);
+// stack.push(30);
+
+// console.log("Stack elements:", stack); // Output: [10, 20, 30]
+
+// // Pop element from the stack (LIFO)
+// const poppedElement = stack.pop();
+// console.log("Popped element:", poppedElement); // Output: 30
+
+// console.log("Stack after popping:", stack); // Output: [10, 20]
+
+// function findPairsWithSum(array) {
+//   const result = [];
+//   const seen = {};
+
+//   for (let num of array) {
+//     const complement = 15 - num;
+//     if (seen[complement]) {
+//       result.push([complement, num]);
+//     }
+//     seen[num] = true;
+//   }
+
+//   return result;
+// }
+
+// // Example usage:
+// const originalArray = [1, 5, 7, 10, 8, 6, 9];
+
+// const pairs = findPairsWithSum(originalArray);
+// console.log("Pairs with sum 15:", pairs);
+
+
+
+
+
+
+
+
+
+    </script>
 </body>
 </html>
