--- a/mock.html
+++ b/mock.html
@@ -81,21 +81,21 @@
 //  PrimeNumber(10)
 
 
-let sum = 0;
-let number = 140;
-let n = number;
+// let sum = 0;
+// let number = 140;
+// let n = number;
 
-while (n !== 0) {
-    let r = n % 10;
-    sum += r * r * r;
-    n = parseInt(n / 10) ; 
-}
+// while (n !== 0) {
+//     let r = n % 10;
+//     sum += r * r * r;
+//     n = parseInt(n / 10) ; 
+// }
 
-if (sum === number) {
-    document.write(number + " is an Armstrong number");
-} else {
-    document.write(number + " is invalid");
-}
+// if (sum === number) {
+//     document.write(number + " is an Armstrong number");
+// } else {
+//     document.write(number + " is invalid");
+// }
 
     </script>
 </body>
