--- a/NEW.HTML
+++ b/NEW.HTML
@@ -8,7 +8,44 @@
 <body>
 
     <script>
+        // function mul (x) {
+        //     return function (y) {
+        //         return function (z) {
+        //             return x*y*z
+        //         }
+        //     }
+        // }
+        // console.log(mul(2)(3)(4))
+
+        // for (let i = 0 ; i <= 5 ; i++) {
+        //     for (let j = 0 ; j<= i ; j++ ) {
+        //         document.write("*")
+        //     }
+        //     document.write("<br>")
+        // }
+
         
+        // for (let i = 0 ; i <= 5 ; i++) {
+        //     for (let k = 5 ; k>=i ; k--) {
+        //         document.write("&nbsp")
+        //     }
+        //     for (let j = 0 ; j<= i ; j++ ) {
+        //         document.write("*",)
+        //     }
+        //     document.write("<br>")
+        // }
+
+
+        // for (let i = 0 ; i <= 5 ; i++) {
+        //     for (let k = 5 ; k>=i ; k--) {
+        //         document.write("&nbsp&nbsp")
+        //     }
+        //     for (let j = 0 ; j<= i ; j++ ) {
+        //         document.write("*",)
+        //     }
+        //     document.write("<br>")
+        // }
+
     </script>
 </body>
 </html>
