--- a/Practice.html
+++ b/Practice.html
@@ -53,36 +53,36 @@
         // program to generate fibonacci series up to n terms
 
 // take input from the user
-const number = parseInt(prompt('Enter the number of terms: '));
-let n1 = 0, n2 = 1, nextTerm;
+// const number = parseInt(prompt('Enter the number of terms: '));
+// let n1 = 0, n2 = 1, nextTerm;
 
-document.write('Fibonacci Series:');
+// document.write('Fibonacci Series:');
 
-for (let i = 1; i <= number; i++) {
-    document.write(n1);
-    nextTerm = n1 + n2;
-    n1 = n2;
-    n2 = nextTerm;
-}
+// for (let i = 1; i <= number; i++) {
+//     document.write(n1);
+//     nextTerm = n1 + n2;
+//     n1 = n2;
+//     n2 = nextTerm;
+// }
 
-function isPalindrome(str) {
-	let j = str.length - 1
-	for (let i = 0; i < str.length / 2; i++) {
-		if (str[i] != str[j]) {
-			return false;
-		}
-		j--;
-	}
-	return true;
-}
+// function isPalindrome(str) {
+// 	let j = str.length - 1
+// 	for (let i = 0; i < str.length / 2; i++) {
+// 		if (str[i] != str[j]) {
+// 			return false;
+// 		}
+// 		j--;
+// 	}
+// 	return true;
+// }
 
-let str1 = "racecar";
-let str2 = "nitin";
-let str3 = "Rama";
+// let str1 = "racecar";
+// let str2 = "nitin";
+// let str3 = "Rama";
 
-console.log(isPalindrome(str1));
-console.log(isPalindrome(str2));
-console.log(isPalindrome(str3));
+// console.log(isPalindrome(str1));
+// console.log(isPalindrome(str2));
+// console.log(isPalindrome(str3));
 
     </script>
 </body>
