--- a/Daily Practice/10may.html
+++ b/Daily Practice/10may.html
@@ -10,13 +10,16 @@
 <body>
     <script>
         // display current day and time
+
         // const now = new Date();
         // document.write("Today is: " + new Intl.DateTimeFormat('en-US', {weekday: 'long'}).format(now));
         // <br/>
         // document.write("Current time is: " + now.toLocaleTimeString('en-US', {hour: 'numeric', minute: '2-digit', second: '2-digit'}));
 
 
+
         // Side of triangles
+
         // let a = 5 ;
         // let b = 6 ;
         // let c = 7 ;
@@ -25,8 +28,8 @@
         // let result = Math.sqrt(side)
         // document.write(result)
 
-        //check if year is leap year or not
 
+        //check if year is leap year or not
         // let a = prompt("enter a year")
         // if(a % 4 == 0) {
         //     document.write("Leap Year")
@@ -35,8 +38,21 @@
         //     document.write("Not a leap year")
         // }
 
+        // Convert temperature
+        //         let x = prompt("enter a number to convert into f to C"); 
+        // let celsius = (x - 32) * (5/9);
+        // document.write("temp. convert into f to c=",celsius)
 
-        
+        // function computeSumOrTriple(num1, num2) {
+        // const sum = num1 + num2;
+        // return num1 === num2 ? sum * 3 : sum;
+        // }
+        // // Test the function
+        // const num1 = 5;
+        // const num2 = 2;
+        // const result = computeSumOrTriple(num1, num2);
+        // console.log("Result:", result);
+
     </script>
 </body>
 
