--- a/Daily Practice/10may.html
+++ b/Daily Practice/10may.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 may coding practice</title>
+    <title>10 May Coding Practice</title>
 </head>
 
 <body>
     <script>
-        // display current day and time
 
+        // display current day and time
+        
         // const now = new Date();
         // document.write("Today is: " + new Intl.DateTimeFormat('en-US', {weekday: 'long'}).format(now));
         // <br/>
         // document.write("Current time is: " + now.toLocaleTimeString('en-US', {hour: 'numeric', minute: '2-digit', second: '2-digit'}));
-
 
 
         // Side of triangles
@@ -29,6 +29,7 @@
         // document.write(result)
 
 
+
         //check if year is leap year or not
         // let a = prompt("enter a year")
         // if(a % 4 == 0) {
@@ -38,20 +39,30 @@
         //     document.write("Not a leap year")
         // }
 
+
+
         // Convert temperature
         //         let x = prompt("enter a number to convert into f to C"); 
         // let celsius = (x - 32) * (5/9);
         // document.write("temp. convert into f to c=",celsius)
 
+
+
         // function computeSumOrTriple(num1, num2) {
         // const sum = num1 + num2;
         // return num1 === num2 ? sum * 3 : sum;
         // }
+
         // // Test the function
         // const num1 = 5;
         // const num2 = 2;
         // const result = computeSumOrTriple(num1, num2);
         // console.log("Result:", result);
+
+        
+
+
+
 
     </script>
 </body>
