--- a/Daily Practice/10may.html
+++ b/Daily Practice/10may.html
@@ -17,7 +17,14 @@
         // <br/>
         // document.write("Current time is: " + now.toLocaleTimeString('en-US', {hour: 'numeric', minute: '2-digit', second: '2-digit'}));
 
+   // display current day and time
+        
+        // const now = new Date();
+        // document.write("Today is: " + new Intl.DateTimeFormat('en-US', {weekday: 'long'}).format(now));
+        // <br/>
+        // document.write("Current time is: " + now.toLocaleTimeString('en-US', {hour: 'numeric', minute: '2-digit', second: '2-digit'}));
 
+        
         // Side of triangles
 
         // let a = 5 ;
