--- a/Daily Practice/10may.html
+++ b/Daily Practice/10may.html
@@ -11,6 +11,8 @@
     <script>
 
         // display current day and time
+        // display current day and time
+        // display current day and time
         
         // const now = new Date();
         // document.write("Today is: " + new Intl.DateTimeFormat('en-US', {weekday: 'long'}).format(now));
