--- a/22may.html
+++ b/22may.html
@@ -1,4 +1,4 @@
-import * as React from 'react';
+<!-- import * as React from 'react';
 import { DemoContainer } from '@mui/x-date-pickers/internals/demo';
 import { LocalizationProvider } from '@mui/x-date-pickers-pro/LocalizationProvider';
 import { AdapterDayjs } from '@mui/x-date-pickers-pro/AdapterDayjs';
@@ -397,4 +397,4 @@ export default function NewBooking() {
 
     </>
   );
-}
+} -->
