--- a/20may.html
+++ b/20may.html
@@ -32,6 +32,11 @@
                                     InputProps={{ inputProps: { min: 0, max: room.availability } }}
                                     size="small"
                                 />
+                                <TextField 
+                                    type="number" 
+                                    InputProps={{ inputProps: { min: 0, max: room.availability } }}
+                                    size="small"
+                                />
                                 <Button variant="contained" size="small" style={{ marginLeft: '10px' }}>
                                     ADD
                                 </Button>
